--- a/main.html
+++ b/main.html
@@ -1,16 +1,45 @@
-<!DOCTYPE html>
+<h2>Student List</h2>
+<table border="1">
+  <thead>
+    <tr>
+      <th>Roll Number</th>
+      <th>Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>John Doe</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Jane Smith</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Alice   
+ Miller</td>
+    </tr>
+  </tbody>
+</table>
 
-<html>
+<h2>List of medias</h2>
+<ol>
+  <li>
+    <img src="https://picsum.photos/id/123/200/300" alt="Image description">
+  </li>
+  <li>
+    <video controls>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">   
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+      Your browser does not support the video tag.
+    </video>
+  </li>
+  <li>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">   
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
-</body>
-
-</html>
+    </audio>
+  </li>
+</ol>
